<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/logo1" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/anton"
            android:text="@string/refugis"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="18sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/c1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/t1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cardText1"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    app:srcCompat="@drawable/foto1" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/c2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardElevation="6dp"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/t2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cardText2"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    app:srcCompat="@drawable/foto2" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/c3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardElevation="6dp"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/t3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cardText3"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    app:srcCompat="@drawable/foto3" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/c4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardElevation="6dp"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/t4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cardText4"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    app:srcCompat="@drawable/foto4" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/c5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardElevation="6dp"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/t5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cardText5"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    app:srcCompat="@drawable/foto5" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>